--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,22 @@
-<form method="post">
-  <input type="email" name="email" placeholder="Email" required>
-  <input type="password" name="password" placeholder="Password" required>
-  <button type="submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login - TA Monitoring System</title>
+</head>
+<body>
+    <h2>Login</h2>
+
+    <form method="POST">
+        <label>Email:</label><br>
+        <input type="email" name="email" required><br><br>
+
+        <label>Password:</label><br>
+        <input type="password" name="password" required><br><br>
+
+        <button type="submit">Login</button>
+    </form>
+
+    <br>
+    <p>Don't have an account? <a href="/register">Register here</a></p>
+</body>
+</html>
