--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Admin Dashboard - TA Monitoring</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2>Admin Dashboard</h2>
