--- a/templates/bulk_add.html
+++ b/templates/bulk_add.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Bulk Add TAs via CSV</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2> Bulk Add TA Accounts (CSV Upload)</h2>
