--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Login - TA Monitoring System</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2>Login</h2>
