--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Register - TA Monitoring System</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2>Register New User</h2>
