--- a/templates/submit_log.html
+++ b/templates/submit_log.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Submit TA Log</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2>Submit Work Log</h2>
