--- a/templates/summary.html
+++ b/templates/summary.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Weekly Summary - TA Monitoring</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2>📊 Weekly Summary of Approved Logs</h2>
