--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,6 +10,7 @@
     <p>
         <a href="/summary">📊 View Weekly Summary</a> |
         <a href="/bulk_add">📁 Bulk Add TAs via CSV</a> |
+        <a href="/manage-users" class="button">Manage Users</a> |
         <a href="/logout">🚪 Logout</a>
     </p>
 
