--- a/templates/submit_log.html
+++ b/templates/submit_log.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h2>📜 Submit Work Log</h2>
+    <h2>✍️ Submit Work Log</h2>
 
     <form method="POST">
         <label for="date">Date:</label>
