--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h2>Register New User</h2>
+    <h2>📒 Register New User</h2>
 
     <form method="POST">
         <label>Full Name:</label><br>
