--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h2>Login</h2>
+    <h2>🔐 Login</h2>
 
     <form method="POST">
         <label>Email:</label><br>
