--- a/templates/bulk_add.html
+++ b/templates/bulk_add.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h2> Bulk Add TA Accounts (CSV Upload)</h2>
+    <h2> 📂 Bulk Add TA Accounts (CSV Upload)</h2>
 
     <form method="POST" enctype="multipart/form-data">
         <label>Select a CSV file (name, email, password):</label><br><br>
