--- a/templates/login.html
+++ b/templates/login.html
@@ -5,19 +5,28 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+<div class="container">
     <h2>🔐 Login</h2>
 
-    <form method="POST">
+    {% if error %}
+        <div style="color: red; font-weight: bold; margin-bottom: 15px;">
+            {{ error }}
+        </div>
+    {% endif %}
+
+    <form method="POST" action="/login">
         <label>Email:</label><br>
         <input type="email" name="email" required><br><br>
 
         <label>Password:</label><br>
         <input type="password" name="password" required><br><br>
 
-        <button type="submit">Login</button>
+        <button type="submit" class="button">Login</button>
     </form>
 
-    <br>
-    <p>Don't have an account? <a href="/register">Register here</a></p>
+    <div class="nav-footer">
+        <p>Don't have an account? <a href="/register">Register here</a></p>
+    </div>
+</div>
 </body>
 </html>
