--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,6 +9,7 @@
 
     <p>
         <a href="/submit"> Submit New Log</a> |
+        <a href="/reset-password" class="btn btn-outline-secondary mt-3"> Reset Password</a> |
         <a href="/logout"> Logout</a>
     </p>
 
