--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,6 +12,7 @@
         <a href="/summary"> View Weekly Summary</a> |
         <a href="/bulk_add"> Bulk Add TAs via CSV</a> |
         <a href="/manage-users"> Manage Users</a> |
+        <a href="/reset-password" class="btn btn-outline-secondary mt-3"> Reset Password</a> |
         <a href="/logout"> Logout</a>
     </p>
 
