--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
 
     <div class="nav-footer">
         <p>Don't have an account? <a href="/register">Register here</a></p>
+        <a href="/forgot-password">❓ Forgot Password?</a>
     </div>
 </div>
 </body>
