--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,10 @@
         </div>
     {% endif %}
 
+    {% if success %}
+    <div class="alert alert-success mt-3">{{ success }}</div>
+    {% endif %}
+
     <form method="POST" action="/login">
         <label>Email:</label><br>
         <input type="email" name="email" required><br><br>
