--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -3,6 +3,7 @@
 <head>
     <title>Forgot Password</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <h2>🤔 Forgot Password</h2>
