--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,7 @@
 <head>
     <title>Register - TA Monitoring System</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <h2>📒 Register New User</h2>
