--- a/templates/submit_log.html
+++ b/templates/submit_log.html
@@ -3,6 +3,7 @@
 <head>
     <title>Submit TA Log</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
