--- a/templates/submit_log.html
+++ b/templates/submit_log.html
@@ -37,8 +37,7 @@
     </form>
 
     <br>
-    <a href="/dashboard">← Back to Dashboard</a> |
-    <a href="/logout"> Logout</a>
+    <a href="/dashboard">← Back to Dashboard</a>
 
 </body>
 </html>
